fix(board)：完善教程决策时间与命运事件演出。